--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Forms</title>
     <script src="./jsFiles/index.js" defer></script>
     <script src="./jsFiles/function.js" defer></script>
+    <script src="./jsFiles/classes.js" defer></script>
 </head>
 <body>
     <h3>Fill out the following form</h3>
