--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="./jsFiles/index.js" defer></script>
     <script src="./jsFiles/function.js" defer></script>
     <script src="./jsFiles/classes.js" defer></script>
+    <script src="./jsFiles/generics.js" defer></script>
 </head>
 <body>
     <h3>Fill out the following form</h3>
